--- a/package.json
+++ b/package.json
@@ -10,15 +10,25 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.28.9",
+    "@tanstack/react-query-devtools": "^5.28.10",
+    "axios": "^1.6.8",
+    "classnames": "^2.5.1",
+    "framer-motion": "^11.0.24",
+    "immer": "^10.0.4",
+    "lodash": "^4.17.21",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^10.0.5",
+    "react-virtuoso": "^4.7.7",
     "sass": "^1.72.0",
+    "tailwind-variants": "^0.2.1",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
     "@tanstack/eslint-plugin-query": "^5.28.6",
+    "@types/lodash": "^4.17.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
